publish: added setup instructions
generated from commit d9faf3969e156527618bdb611db8da94a868000a

--- a/index.html
+++ b/index.html
@@ -275,6 +275,8 @@ Step 6: Give the copied value (botToken) to the SBR Sales Engineer.
 
 <p><code>https://{YOUR-CHATBOT&#39;S-ENDPOINT}</code></p>
 
+<p>SEE CHATBOT SPECIFIC SETUP INSTRUCTIONS TO THE RIGHT → </p>
+
 <aside class="notice">Authorization: Varies between chatbots, but typically requires your App ID and Password when configuring. We currently must work together with your   developers to set this up, but will soon provide a web interface for self service.</aside>
 
 <h1 id="pepper-data-model">Pepper Data Model</h1>
