publish: Updated intro
generated from commit 285d611ac6e9981b6ef82e64c703e73c8a03d2bd

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ PuppyBot LUIS Endpoint:
    https://westus.api.cognitive.microsoft.com/luis/v2.0/apps/4e4b1c46-5d6d-4035-9905-eef921df734f?subscription-key=37e463e0ae22427abc606d076dafbdd3&amp;timezoneOffset=-480&amp;verbose=true&amp;spellCheck=true&amp;q=
 """""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""</span><span class="w">
 </span></code></pre></div>
-<p>Welcome to the Pepper ChatBot API! You can use this API to access a 3rd party chatbot&rsquo;s endpoints in order to integrate an existing chatbot with Pepper. </p>
+<p>Welcome to the Pepper ChatBot API! You can use this API reference material to connect your 3rd party chatbot&rsquo;s endpoint to your Host account in order to integrate a new or existing chatbot with Pepper. </p>
 
 <p>You can view general integration instructions in this central, light blue section. In the dark area to the right, you can see chatbot-specific code examples corresponding visually in line with each general section. Switch between different chatbot-specific code examples with the tabs in the top right.</p>
 
