--- a/index.html
+++ b/index.html
@@ -244,6 +244,8 @@ https://github.com/SoftBankRoboticsTraining/pepper-dialogflow-chatbot-faq
 (5) Select the 'Export and Import' tab;
 (5) Upload the .zip file from Step 1.
 
+For a quick tutorial: www.youtube.com/watch?v=B8PrcwENCJg
+
 """""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""</span><span class="w">
 </span></code></pre></div>
 <p>Welcome to the Pepper ChatBot API! You can use this API reference material to connect your 3rd party chatbot&rsquo;s endpoint to your Host account in order to integrate a new or existing chatbot with Pepper. </p>
