publish: Added QiChat styles
generated from commit dcd30a45e2584efa5c7312e456e14d5154b3bc5f

--- a/index.html
+++ b/index.html
@@ -414,8 +414,13 @@ Here are some useful QiChat commands:
 
 Speech:
 </span><span class="se">\p</span><span class="s2">au=1000</span><span class="se">\ </span><span class="s2">= Inserts a pause (in milliseconds)
-</span><span class="se">\r</span><span class="s2">spd=100</span><span class="se">\ </span><span class="s2">= Speaking rate (in percentage)
-</span><span class="se">\v</span><span class="s2">ct=100</span><span class="se">\ </span><span class="s2">= Pitch of voice (in percentage)
+</span><span class="se">\r</span><span class="s2">spd=100</span><span class="se">\ </span><span class="s2">= Speed of voice (in percentage, 50-400)
+</span><span class="se">\v</span><span class="s2">ct=100</span><span class="se">\ </span><span class="s2">= Pitch of voice (in percentage, 50=200)
+</span><span class="se">\v</span><span class="s2">ol=100</span><span class="se">\ </span><span class="s2">= Volume of voice (in percentage, 0-100)
+</span><span class="se">\s</span><span class="s2">tyle=joyful</span><span class="se">\ </span><span class="s2">= Joyful intonation
+</span><span class="se">\s</span><span class="s2">tyle=neutral</span><span class="se">\ </span><span class="s2">= Normal intonation
+</span><span class="se">\s</span><span class="s2">tyle=didactic</span><span class="se">\ </span><span class="s2">= Didactic intonation
+</span><span class="se">\r</span><span class="s2">st</span><span class="se">\ </span><span class="s2">= Resets control sequences
 
 Animations/Dances/Games:
 ^run(animation_full_name*) = Animates Pepper w/ a given animation
