--- a/index.html
+++ b/index.html
@@ -1284,43 +1284,6 @@ MS-Bot: SET BACKGROUND IMAGE
 
 Not yet available in MS-Bot
 </span></code></pre></div>
-<h1 id="voice-shaping-commands">→  Voice Shaping Commands</h1>
-
-<blockquote>
-<p>Pepper Voice Shaping Commands - <br><br>&ldquo;Did you know? <br>💡💡💡💡💡💡💡💡💡💡💡💡💡<br> QiChat is Pepper&rsquo;s native language.</p>
-</blockquote>
-
-<p>Below are some useful voice commands a chatbot creator can use to control Pepper&rsquo;s delivery of certain lines or words. These commands are used as a markup language throughout a chatbot to wrap a word (or a series of words) in order to change the intonation and speed of Pepper&rsquo;s voice as he speaks the word(s)! </p>
-
-<p><br><br></p>
-
-<h2 id="qichat-voice-commands">QiChat voice commands * | * * :</h2>
-
-<p><code>\pau=1000\ </code> = Inserts a pause (in milliseconds)<br>
-<code>\rspd=100\ </code> = Speed of voice (in percentage, 50-400)<br>
-<code>\vct=100\ </code> = Pitch of voice (in percentage, 50=200)<br>
-<code>\vol=100\ </code> = Volume of voice (in percentage, 0-100)<br>
-<code>\style=joyful\ </code> = Joyful intonation<br>
-<code>\style=neutral\ </code> = Normal intonation<br>
-<code>\style=didactic\ </code> = Didactic intonation<br>
-<code>\rst\ </code> = Resets control sequences<br></p>
-
-<blockquote>
-<p>Ex. Usage: To imitate an emotional response <br>
-User: Pepper you&rsquo;re fired! <br>
-Pepper: \style=joyful\ No! \pau=100\ Please! \pau=500\ I need this job. \style=neutral\  &hellip; </p>
-
-<p>Ex. Usages: (1) To pause for dramatic effect; (2) to emphasize a word or syllable (puns)<br>
-Want to hear a joke about a piece of paper? \pau=800\ Never <br>
-mind \pau=400\ it&rsquo;s \pau=300\ \rspd=50\ tearable. \rspd=100\</p>
-</blockquote>
-
-<aside class='info'> * When using JSON syntax (Custom Payloads, etc.), QiChat commands must be double-escaped (\).</aside>
-
-<aside class='warning'> * * WARNING: The Pepper Chat Simulator (available in web-based <a href="https://pepper-chat.azurewebsites.net">Pepper Chat CMS</a>) does not support QiChat codes at this point!</aside>
-
-<p><br></p>
-
 <h1 id="spoken-vs-displayed-text">→  Spoken vs Displayed Text</h1>
 
 <h3 id="what-pepper-speaks-vs-what-pepper-displays-on-tablet">WHAT PEPPER SPEAKS vs. WHAT PEPPER DISPLAYS ON TABLET:</h3>
@@ -1354,6 +1317,43 @@ Pepper: {What Pepper Says} || {What Pepper displays on the tablet} <br>
 User: Can you speak Pig Latin, Pepper? <br>
 Pepper: {What Pepper Says} || {What Pepper displays on the tablet} <br>
 → View how to do it → <br></p>
+
+<h1 id="voice-shaping-commands">→  Voice Shaping Commands</h1>
+
+<blockquote>
+<p>Pepper Voice Shaping Commands - <br><br>&ldquo;Did you know? <br>💡💡💡💡💡💡💡💡💡💡💡💡💡<br> QiChat is Pepper&rsquo;s native language.</p>
+</blockquote>
+
+<p>Below are some useful voice commands a chatbot creator can use to control Pepper&rsquo;s delivery of certain lines or words. These commands are used as a markup language throughout a chatbot to wrap a word (or a series of words) in order to change the intonation and speed of Pepper&rsquo;s voice as he speaks the word(s)! In order to use these commands, you must end the sentence with the double pipes (||) and provide a clean, non QiChat version of the text.</p>
+
+<p><br><br></p>
+
+<h2 id="qichat-voice-commands">QiChat voice commands * | * * :</h2>
+
+<p><code>\pau=1000\ </code> = Inserts a pause (in milliseconds)<br>
+<code>\rspd=100\ </code> = Speed of voice (in percentage, 50-400)<br>
+<code>\vct=100\ </code> = Pitch of voice (in percentage, 50=200)<br>
+<code>\vol=100\ </code> = Volume of voice (in percentage, 0-100)<br>
+<code>\style=joyful\ </code> = Joyful intonation<br>
+<code>\style=neutral\ </code> = Normal intonation<br>
+<code>\style=didactic\ </code> = Didactic intonation<br>
+<code>\rst\ </code> = Resets control sequences<br></p>
+
+<blockquote>
+<p>Ex. Usage: To imitate an emotional response <br>
+User: Pepper you&rsquo;re fired! <br>
+Pepper: \style=joyful\ No! \pau=100\ Please! \pau=500\ I need this job. \style=neutral\ ||  No!  Please! I need this job. &hellip; </p>
+
+<p>Ex. Usages: (1) To pause for dramatic effect; (2) to emphasize a word or syllable (puns)<br>
+Pepper: Want to hear a joke about a piece of paper? \pau=800\ Never <br>
+mind \pau=400\ it&rsquo;s \pau=300\ \rspd=50\ tearable. \rspd=100\ || Want to hear a joke about a piece of paper? Nevermind. It&rsquo;s terrible.</p>
+</blockquote>
+
+<aside class='info'> * When using JSON syntax (Custom Payloads, etc.), QiChat commands must be double-escaped (\).</aside>
+
+<aside class='warning'> * * WARNING: The Pepper Chat Simulator (available in web-based <a href="https://pepper-chat.azurewebsites.net">Pepper Chat CMS</a>) does not support QiChat codes at this point!</aside>
+
+<p><br></p>
 
 <h1 id="pepper-animations">→  Pepper Animations</h1>
 
