publish: updated Pepper Chat URL
generated from commit 3b464219fa3fde1f2bd4c0235a222efda789fe1a

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ response from the options below for your welcome intent response.
 </span></code></pre></div>
 <p>ChatBots use RESTful APIs with APP IDs, PASSWORDs, and/or ACCESS TOKENS to authenticate in order to send and retrieve text &amp; multimedia session data. </p>
 
-<p>With SoftBank Robotics America&rsquo;s new Pepper ChatBot API and the Pepper Chat platform built on top of it, connecting your <a href="www.dialogflow.com">Dialogflow</a> or <a href="https://dev.botframework.com/">Microsoft Bot Framework</a> chatbot is as easy as it possibly can be. Simply log in to <a href="https://pepperchat.azurewebsites.net">Pepper Chat CMS</a> (Content Management System) and provide the platform with a friendly name for your bot and your bot&rsquo;s client access token.</p>
+<p>With SoftBank Robotics America&rsquo;s new Pepper ChatBot API and the Pepper Chat platform built on top of it, connecting your <a href="www.dialogflow.com">Dialogflow</a> or <a href="https://dev.botframework.com/">Microsoft Bot Framework</a> chatbot is as easy as it possibly can be. Simply log in to <a href="https://pepper-chat.azurewebsites.net">Pepper Chat CMS</a> (Content Management System) and provide the platform with a friendly name for your bot and your bot&rsquo;s client access token.</p>
 
 <p>I.) CHATBOT INSTRUCTIONS:
 <br>
