publish: Updated Pepper Chat URL
generated from commit 27252b9f95227c55e93ee5d1b00acfb083f57ae6

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ response from the options below for your welcome intent response.
 
 <p>II.) PEPPER CHAT INSTRUCTIONS: 
 <br>
-1) Using your existing Host credentials, log in to the <a href="https://pepperchat.azurewebsites.net">Pepper Chat CMS</a>
+1) Using your existing Host credentials, log in to the <a href="https://pepper-chat.azurewebsites.net">Pepper Chat CMS</a>
 <br>
 2) Add a new chatbot to your account from within the CHATBOTS tab, using the &lsquo;Add A Chatbot&rsquo; button; 
 <br>
