publish: Updated with init1234 message + default fallback explanation + Play-A-Game comma-fix
generated from commit e24f287f7d261a935d76a3ae6e9c1679dcf86161

--- a/index.html
+++ b/index.html
@@ -263,8 +263,6 @@ https://github.com/softbank-robotics-america/pepper-chat-dialogflow-fulfillment-
 <p>NAVIGATING THIS REFERENCE:
 You can view general integration instructions in this central, light blue section. In the dark area to the right, you can see Dialogflow-specific code examples corresponding visually in line with each general section. </p>
 
-<aside class="notice">We currently only support integrations with Google&rsquo;s <a href="https://dialogflow.com/">Dialogflow</a>, but this list is quickly growing, so check back soon or else get in touch with us directly if your chatbot platform of choice does not appear on this list!</aside>
-
 <h1 id="getting-started">Getting Started</h1>
 
 <blockquote>
@@ -312,7 +310,7 @@ below for your welcome intent's response.
 </span></code></pre></div>
 <p>ChatBots use RESTful APIs with some form of credentials (typically KEY FILES, ACCESS TOKENS, APP IDs, PASSWORDS, etc.) to authenticate in order to send and retrieve text &amp; multimedia session data. </p>
 
-<p>With SoftBank Robotics America&rsquo;s new Pepper ChatBot API and the Pepper Chat platform built on top of it, connecting your <a href="www.dialogflow.com">Dialogflow</a> or <a href="https://dev.botframework.com/">Microsoft Bot Framework</a> chatbot is as easy as it possibly can be. Simply log in to <a href="https://pepper-chat.azurewebsites.net">Pepper Chat CMS</a> (Content Management System) and provide the platform with a friendly name for your bot and either your bot&rsquo;s client access token or else a key file.</p>
+<p>With SoftBank Robotics America&rsquo;s new Pepper ChatBot API and the Pepper Chat platform built on top of it, connecting your <a href="www.dialogflow.com">Dialogflow chatbot is as easy as it possibly can be. Simply log in to <a href="https://pepper-chat.azurewebsites.net">Pepper Chat CMS</a> (Content Management System) and provide the platform with a friendly name for your bot and either your bot&rsquo;s client access token or else a key file.</p>
 
 <p>I.) CHATBOT INSTRUCTIONS:
 <br>
@@ -329,13 +327,16 @@ below for your welcome intent's response.
 <br>
 4) Activate the chatbot for the desired robot(s) by clicking on the Robots tab and selecting the chatbot from the dropdown menu.
 <br>
-5) Disable the standard Host menu by logging into the standard <a href="www.pepperreception.azurewebsites.net">Host CMS</a> and turning off Notify, Company Stories, &amp; Entertainment, while ensuring that the FAQ feature remains on.</p>
+5) Disable the standard Host menu by logging into the standard <a href="www.pepperreception.azurewebsites.net">Host CMS</a> and turning off Notify, Company Stories, &amp; Entertainment, while ensuring that the FAQ feature remains on.
+<br>
+6) Within your Dialogflow agent, to set up a Welcome intent, use the training phrase &ldquo;init1234&rdquo;. The &ldquo;init1234&rdquo; training phrase will activate this intent as the entry point to every interaction. NOTE: If you do not set up an intent with this training phrase, then the system will still send the &ldquo;init1234&rdquo; message, and as a result, Pepper will start every interaction with your default Fallback intent&rsquo;s response.
+<br></p>
 
-<aside class="info">V1 requires a Client Token to authenticate: </aside>
+<aside class="info">Dialogflow V1 agents require a Client Token to authenticate: </aside>
 
 <p><img src = "images/PEPPER_CHAT.V1.Authentication.Add_A_Robot.png"/></p>
 
-<aside class="info">V2 requires a KeyPath file to authenticate:</aside>
+<aside class="info">(BETA: Unstable) Dialogflow V2 agents require a KeyPath file to authenticate:</aside>
 
 <p><img src = "images/PEPPER_CHAT.V2.Authentication.Add_A_Robot.png"/><br><br></p>
 
@@ -1241,7 +1242,7 @@ I.) UI:
   A.) To initiate a specific game, under the 'Response' section, 
   select 'Custom Payload' and enter the following:
   {
-    "</span><span class="err">speak</span><span class="s2">": "</span><span class="err">Initiating</span><span class="w"> </span><span class="err">selfie</span><span class="w"> </span><span class="err">mode.</span><span class="s2">"
+    "</span><span class="err">speak</span><span class="s2">": "</span><span class="err">Initiating</span><span class="w"> </span><span class="err">selfie</span><span class="w"> </span><span class="err">mode.</span><span class="s2">",
     "</span><span class="err">action</span><span class="s2">": "</span><span class="err">playGame</span><span class="s2">",
     "</span><span class="err">action_parameters</span><span class="s2">": {
       "</span><span class="err">gameName</span><span class="s2">": "</span><span class="err">Take</span><span class="w"> </span><span class="err">a</span><span class="w"> </span><span class="err">Selfie</span><span class="s2">"
