publish: Added new keypad image
generated from commit 2d886aa4fd50b67135e1dc36c85266d251f41599

--- a/index.html
+++ b/index.html
@@ -1529,7 +1529,7 @@ Ex.) The following example shows how this might look in practice:<br>
 
           <h1 id="faq-limitations">FAQ &amp; Limitations</h1>
 
-<aside class="notice">General FAQ questions are listed below. If you have a question not on our FAQ, please contact us at training@softbankrobotics.com</aside>
+<aside class="notice">General FAQ questions are listed below. If you have a question not on our FAQ, please contact us at support@softbankrobotics.com</aside>
 
 <p>Q. Can I send the different response types using fulfillment?</p>
 
