publish: Updated for v2
generated from commit ad5e4c88dfd5ca916fc0bfa3abb24b448443a3b3

--- a/index.html
+++ b/index.html
@@ -270,9 +270,11 @@ You can view general integration instructions in this central, light blue sectio
 <a href="https://www.udemy.com/learn-conversational-ux-on-pepper-the-robot/"><img src="images/PEPPER_CHAT_PLATFORM.Udemy_Course.png"></a></p>
 <h1 id='authentication-amp-setup'>Authentication &amp; Setup</h1><pre class="highlight plaintext"><code>"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 DIALOGFLOW SETUP INSTRUCTIONS:
-For Dialogflow bots, setup varies based on which agent version your bot is. 
-For V1 agents, setup consists of providing us with your Client Access Token. 
-You can find your Client Access Token by following the below steps.
+Note: V1 Agents and the V1 chatbot authentication mechanism (Client Access 
+  Tokens) have been deprecated! Please follow the step-by-step guide outlined
+  in the FAQ at the bottom of this page to migrate your Pepper Dialogflow 
+  chatbot to V2. When it comes to pairing your migrated V2 chatbot to Pepper
+  Chat, follow the following instructions:
 
 V2 Instructions: 
 Step 1: Open your bot in Dialogflow (https://console.dialogflow.com/)
@@ -287,8 +289,7 @@ Step 4: Within the Google Cloud Platform console, click on the Actions ellipsis
 Step 5: Upload this keypath file into Pepper Chat → See central panel
  for instructions
 
-Note: V1 Agents and the V1 chatbot authentication mechanism (Client Access 
-  Tokens) have been deprecated.
+
 
 
 
